argocd/homelab/jellyfin/copyparty-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      containers:
        - name: copyparty
          image: copyparty/ac:1.20.13
          ports:
            - containerPort: 3923
              name: web
          volumeMounts:
            - mountPath: /w
              name: media-pvc
              subPath: media
            - mountPath: /cfg
              name: copyparty-config
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 2Gi
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
        - name: copyparty-config
          configMap:
            name: copyparty-config
