argocd/homelab/jellyfin/jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.8
          ports:
            - containerPort: 8096
              name: web
            - containerPort: 8920
              name: https
          volumeMounts:
            - mountPath: /config
              name: media-pvc
              subPath: jellyfin/config
            - mountPath: /cache
              name: media-pvc
              subPath: jellyfin/cache
            - mountPath: /media
              name: media-pvc
              subPath: media
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 8Gi
        - name: copyparty
          image: copyparty/dj:1.20.13
          ports:
            - containerPort: 3923
              name: web
          volumeMounts:
            - mountPath: /w
              name: media-pvc
              subPath: media
            - mountPath: /cfg
              name: copyparty-config
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 512Mi
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media-pvc
        - name: copyparty-config
          configMap:
            name: copyparty-config
