argocd/homelab/jellyfin/copyparty-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: jellyfin
spec:
  ports:
    - port: 3923
      targetPort: 3923
      name: web
  selector:
    app: jellyfin
  type: ClusterIP
