argocd/homelab/jellyfin/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
    - port: 8096
      targetPort: 8096
      name: web
  selector:
    app: jellyfin
  type: ClusterIP
