argocd/homelab/jellyfin/copyparty-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: compaan-ca
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: traefik-private
  tls:
    - hosts:
        - copyparty.compaan
      secretName: copyparty-compaan-tls
  rules:
    - host: copyparty.compaan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: copyparty
                port:
                  number: 3923
