argocd/homelab/jellyfin/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: compaan-ca
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: traefik-private
  tls:
    - hosts:
        - jellyfin.compaan
      secretName: jellyfin-compaan-tls
  rules:
    - host: jellyfin.compaan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
